--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5731B626-BC65-477B-BEA7-3A5163B306AE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MatchMakingMonitor</RootNamespace>
-    <AssemblyName>MatchMakingMonitor</AssemblyName>
+    <RootNamespace>MatchmakingMonitor</RootNamespace>
+    <AssemblyName>MatchmakingMonitor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
