--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "matchmakingmonitor",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json --aot=false",
-    "build": "ng build"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/animations": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@angular/material": "2.0.0-beta.6",
-    "core-js": "2.4.1",
-    "rxjs": "5.4.0",
-    "zone.js": "0.8.11"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.1.3",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.60",
-    "codelyzer": "2.0.0",
-    "ts-node": "3.0.4",
-    "tslint": "4.5.0",
-    "typescript": "2.3.3"
-  }
+	"name": "matchmakingmonitor",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve --proxy-config proxy.conf.json --aot=false",
+		"start:prod": "ng serve --prod --proxy-config proxy.conf.json",
+		"build": "ng build",
+		"build:prod": "ng build --prod --vendor-chunk=false"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/common": "4.1.3",
+		"@angular/animations": "4.1.3",
+		"@angular/compiler": "4.1.3",
+		"@angular/core": "4.1.3",
+		"@angular/forms": "4.1.3",
+		"@angular/http": "4.1.3",
+		"@angular/platform-browser": "4.1.3",
+		"@angular/platform-browser-dynamic": "4.1.3",
+		"@angular/router": "4.1.3",
+		"@angular/material": "2.0.0-beta.6",
+		"core-js": "2.4.1",
+		"rxjs": "5.4.0",
+		"zone.js": "0.8.11"
+	},
+	"devDependencies": {
+		"@angular/cli": "1.0.0",
+		"@angular/compiler-cli": "4.1.3",
+		"@types/jasmine": "2.5.38",
+		"@types/node": "6.0.60",
+		"codelyzer": "2.0.0",
+		"ts-node": "3.0.4",
+		"tslint": "4.5.0",
+		"typescript": "2.3.3"
+	}
 }
