Added changelogs and feedback form

--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bugs\" />
+    <Folder Include="changelogs\" />
+    <Folder Include="features\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
