--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -21,6 +21,7 @@
 		"@angular/platform-browser-dynamic": "4.1.3",
 		"@angular/router": "4.1.3",
 		"@angular/material": "2.0.0-beta.6",
+		"angular2-markdown": "1.6.0",
 		"core-js": "2.4.1",
 		"rxjs": "5.4.0",
 		"zone.js": "0.8.11"
