--- a/Server/Backend.Test/Web.config
+++ b/Server/Backend.Test/Web.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
 	<system.web>
 		<compilation debug="true" targetFramework="4.6.1" />
@@ -10,15 +11,17 @@
 			<remove name="OPTIONSVerbHandler" />
 			<remove name="TRACEVerbHandler" />
 			<remove name="StaticFile" />
-			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-			<add name="Owin" verb="" path="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
+			     type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+			<add name="Owin" verb="" path="*"
+			     type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
 		</handlers>
 		<rewrite>
 			<rules>
 				<rule name="Ignore" enabled="true" stopProcessing="true">
-					<match url=".(js|css|ico)"/>
-					<conditions logicalGrouping="MatchAll" trackAllCaptures="false"/>
-					<action type="None"/>
+					<match url=".(js|css|ico)" />
+					<conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+					<action type="None" />
 				</rule>
 				<rule name="Angular" stopProcessing="true">
 					<match url=".*" />
@@ -40,7 +43,8 @@
 					<action type="Rewrite" url="/index.html" />-->
 				</rule>
 			</rules>
-		</rewrite>>
+		</rewrite>
+		>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
