Fixed SEA region enum Fixed cached download not returning bytes as string leading to invalid zip Version to 1.0.1.0 Added changelog

--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="versions\MatchmakingMonitor-1.0.0.0.zip" />
+    <Content Include="changelogs\1.0.1.0.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -140,7 +141,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bugs\" />
-    <Folder Include="changelogs\" />
     <Folder Include="features\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
