Added functionality to remember last position and size of window
update to version 1.0.2.0

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -141,6 +141,7 @@
     </ApplicationDefinition>
     <Compile Include="config\BaseUrl.cs" />
     <Compile Include="config\AppId.cs" />
+    <Compile Include="config\LastWindowProperties.cs" />
     <Compile Include="config\LimitsType.cs" />
     <Compile Include="config\LimitsTier.cs" />
     <Compile Include="config\Reflection\ChangedSetting.cs" />
