--- a/Client/config/settings.default.json
+++ b/Client/config/settings.default.json
@@ -39,6 +39,13 @@
 		}
 	],
 	"token": "",
+	"lastWindowProperties": {
+		"left": 0,
+		"top": 0,
+		"width": 0,
+		"height": 0,
+		"maximized": true
+	},
 	"colors": [
 		"#401070",
 		"#793db6",
@@ -52,218 +59,218 @@
 	],
 	"fontSize": 12,
 	"hideLowBattles": true,
-	"battleLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-	"winRateLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
-	"avgFragsLimits": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ],
+	"battleLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
+	"winRateLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
+	"avgFragsLimits": [0, 0, 0, 0, 0, 0, 0, 0, 0],
 	"avgXpLimits": [
 		{
 			"tier": 1,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 2,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 3,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 4,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 5,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 6,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 7,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 8,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 9,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		},
 		{
 			"tier": 10,
-			"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+			"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 		}
 	],
 	"avgDmgLimits": {
 		"destroyer": [
 			{
 				"tier": 1,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 2,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 3,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 4,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 5,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 6,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 7,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 8,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 9,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 10,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			}
 		],
 		"battleship": [
 			{
 				"tier": 1,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 2,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 3,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 4,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 5,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 6,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 7,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 8,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 9,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 10,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			}
 		],
 		"cruiser": [
 			{
 				"tier": 1,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 2,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 3,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 4,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 5,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 6,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 7,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 8,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 9,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 10,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			}
 		],
 		"airCarrier": [
 			{
 				"tier": 1,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 2,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 3,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 4,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 5,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 6,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 7,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 8,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 9,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			},
 			{
 				"tier": 10,
-				"values": [ 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+				"values": [0, 0, 0, 0, 0, 0, 0, 0, 0]
 			}
 		]
 	},
