Added a field for the contact information to the form Fixed a bug where the download doesn't work when just coming to the page Fixed bug with baseUrl still having the wrong region identifier Version to 1.0.3.0

--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -124,6 +124,7 @@
     <Content Include="versions\MatchmakingMonitor-1.0.2.0.zip" />
     <Content Include="changelogs\1.0.1.0.md" />
     <Content Include="changelogs\1.0.2.0.md" />
+    <Content Include="changelogs\1.0.3.0.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
