--- a/Server/Backend.Test/Web.config
+++ b/Server/Backend.Test/Web.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0"?>
+
 <configuration>
-  <!--
+	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
     The following attributes can be set on the <httpRuntime> tag.
@@ -8,37 +9,39 @@
         <httpRuntime targetFramework="4.6.2" />
       </system.Web>
   -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.6.2"/>
-    <httpRuntime targetFramework="4.6.1"/>
-  </system.web>
-  <system.webServer>
-    <handlers accessPolicy="Read, Execute, Script">
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <remove name="OPTIONSVerbHandler"/>
-      <remove name="TRACEVerbHandler"/>
-      <remove name="StaticFile"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
-      <add name="Owin" verb="" path="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb"/>
-    </handlers>
-    <rewrite>
-      <rules>
-        <rule name="Ignore" enabled="true" stopProcessing="true">
-          <match url=".(js|css|ico)"/>
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="false"/>
-          <action type="None"/>
-        </rule>
-        <rule name="Angular" stopProcessing="true">
-          <match url=".*"/>
-          <action type="Rewrite" url="/index.html"/>
-          <conditions>
-            <add input="{REQUEST_URI}" negate="true" pattern="^/api" ignoreCase="true"/>
-            <add input="{REQUEST_URI}" negate="true" pattern="^/swagger" ignoreCase="true"/>
-          </conditions>
-          <!--<conditions logicalGrouping="MatchAll">
+	<system.web>
+		<compilation debug="true" targetFramework="4.6.2" />
+		<httpRuntime targetFramework="4.6.1" />
+	</system.web>
+	<system.webServer>
+		<handlers accessPolicy="Read, Execute, Script">
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<remove name="OPTIONSVerbHandler" />
+			<remove name="TRACEVerbHandler" />
+			<remove name="StaticFile" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
+			     type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+			<add name="Owin" verb="" path="*"
+			     type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
+		</handlers>
+		<rewrite>
+			<rules>
+				<rule name="Ignore" enabled="true" stopProcessing="true">
+					<match url=".(js|css|ico)" />
+					<conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+					<action type="None" />
+				</rule>
+				<rule name="Angular" stopProcessing="true">
+					<match url=".*" />
+					<action type="Rewrite" url="/index.html" />
+					<conditions>
+						<add input="{REQUEST_URI}" negate="true" pattern="^/api" ignoreCase="true" />
+						<add input="{REQUEST_URI}" negate="true" pattern="^/swagger" ignoreCase="true" />
+					</conditions>
+					<!--<conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
           </conditions>-->
-          <!--<match url=".*" />
+					<!--<match url=".*" />
           <conditions>
             <add input="{REQUEST_URI}" negate="true" pattern="^/api" ignoreCase="true" />
             <add input="{REQUEST_URI}" negate="true" pattern="^/swagger" ignoreCase="true" />
@@ -46,33 +49,33 @@
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
           <action type="Rewrite" url="/index.html" />-->
-        </rule>
-      </rules>
-    </rewrite>
-    &gt;
-  </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.1" newVersion="4.1.1.1"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+				</rule>
+			</rules>
+		</rewrite>
+		&gt;
+	</system.webServer>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.1.1.1" newVersion="4.1.1.1" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
