Test version with socket for app connection Information on website

--- a/Server/Backend.Test/Web.config
+++ b/Server/Backend.Test/Web.config
@@ -27,7 +27,7 @@
 		<rewrite>
 			<rules>
 				<rule name="Ignore" enabled="true" stopProcessing="true">
-					<match url=".(js|css|ico)" />
+					<match url=".(js|css|ico|zip|apk)" />
 					<conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
 					<action type="None" />
 				</rule>
