--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -121,11 +121,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="versions\MatchmakingMonitor-1.0.4.0.zip" />
     <Content Include="changelogs\1.0.1.0.md" />
     <Content Include="changelogs\1.0.2.0.md" />
     <Content Include="changelogs\1.0.3.0.md" />
     <Content Include="changelogs\1.0.4.0.md" />
+    <Content Include="changelogs\1.0.5.0.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
