Added button to enable replays Codecleanup New Version 1.0.7.0

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -286,5 +286,8 @@
     <Resource Include="Images\connectionIcon.png" />
     <Resource Include="Images\qrcodeIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\record-rec.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
