--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -128,6 +128,7 @@
     <Content Include="changelogs\1.0.5.0.md" />
     <Content Include="changelogs\1.0.6.0.md" />
     <Content Include="changelogs\1.0.6.1.md" />
+    <Content Include="changelogs\1.0.7.0.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
