--- a/Client/App.config
+++ b/Client/App.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebSocket4Net" publicKeyToken="eb4e154b696bf72a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.15.0.9" newVersion="0.15.0.9" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
