--- a/Client/packages.config
+++ b/Client/packages.config
@@ -3,6 +3,8 @@
   <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net452" />
   <package id="Gma.QrCodeNet" version="0.4.1.2" targetFramework="net452" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
+  <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net452" />
   <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="net452" />
