Added WowsNumbers Remote stats since warships-today is down
Changed the color of the Installation path on error from OrangeRed to Red

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -170,6 +170,10 @@
     <Compile Include="config\warshipsToday\WarshipsTodayStats.cs" />
     <Compile Include="config\warshipsToday\WarshipsTodayEntry.cs" />
     <Compile Include="config\warshipsToday\WarshipsTodayVehicle.cs" />
+    <Compile Include="config\wowsNumbers\Extensions.cs" />
+    <Compile Include="config\wowsNumbers\RemoteStats.cs" />
+    <Compile Include="config\wowsNumbers\WowsNumbersShipEntry.cs" />
+    <Compile Include="config\wowsNumbers\WowsNumbersShipType.cs" />
     <Compile Include="Models\ExportPlayerStats.cs" />
     <Compile Include="Models\MobileColorKeys.cs" />
     <Compile Include="Models\ResponseTypes\ShipType.cs" />
