--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -23,6 +23,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -130,6 +131,9 @@
     <Content Include="changelogs\1.0.6.1.md" />
     <Content Include="changelogs\1.0.7.0.md" />
     <Content Include="changelogs\1.0.7.1.md" />
+    <Content Include="changelogs\1.1.0.2.md" />
+    <Content Include="changelogs\1.1.0.0.md" />
+    <Content Include="changelogs\1.1.0.1.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
