--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -134,6 +134,7 @@
     <Content Include="changelogs\1.1.0.2.md" />
     <Content Include="changelogs\1.1.0.0.md" />
     <Content Include="changelogs\1.1.0.1.md" />
+    <Content Include="changelogs\1.1.0.3.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
