--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -11,29 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.2.3",
-    "@angular/common": "4.2.3",
-    "@angular/compiler": "4.2.3",
-    "@angular/core": "4.2.3",
-    "@angular/forms": "4.2.3",
-    "@angular/http": "4.2.3",
-    "@angular/material": "2.0.0-beta.6",
-    "@angular/platform-browser": "4.2.3",
-    "@angular/platform-browser-dynamic": "4.2.3",
-    "@angular/router": "4.2.3",
+    "@angular/animations": "5.2.0",
+    "@angular/common": "5.2.0",
+    "@angular/compiler": "5.2.0",
+    "@angular/core": "5.2.0",
+    "@angular/forms": "5.2.0",
+    "@angular/http": "5.2.0",
+    "@angular/material": "5.0.4",
+    "@angular/cdk": "5.0.4", 
+    "@angular/platform-browser": "5.2.0",
+    "@angular/platform-browser-dynamic": "5.2.0",
+    "@angular/router": "5.2.0",
     "angular2-markdown": "1.6.0",
     "core-js": "2.4.1",
-    "rxjs": "5.4.0",
+    "rxjs": "5.5.6",
     "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.2",
-    "@angular/compiler-cli": "4.2.3",
+    "@angular/cli": "1.6.3",
+    "@angular/compiler-cli": "5.2.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
     "ts-node": "3.0.4",
     "tslint": "4.5.0",
-    "typescript": "2.3.3"
+    "typescript": "2.4.2"
   }
 }
