--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -4,37 +4,40 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json --aot=false",
+    "start": "ng run matchmakingmonitor:serve",
     "start:prod": "ng serve --prod --proxy-config proxy.conf.json",
     "build": "ng build",
-    "build:prod": "ng build --prod --vendor-chunk=false"
+    "build:prod": "ng run matchmakingmonitor:build:production"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "5.2.0",
+    "@angular/cdk": "5.0.4",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
     "@angular/core": "5.2.0",
     "@angular/forms": "5.2.0",
     "@angular/http": "5.2.0",
     "@angular/material": "5.0.4",
-    "@angular/cdk": "5.0.4", 
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
-    "angular2-markdown": "1.6.0",
+    "angular2-markdown": "2.2.3",
+    "cookieconsent": "^3.0.6",
     "core-js": "2.4.1",
+    "ngx-cookieconsent": "^1.0.1",
     "rxjs": "5.5.6",
     "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "5.2.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
     "ts-node": "3.0.4",
     "tslint": "4.5.0",
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
