* Updated AppId's to mine to work with the new pricacy regulations * Changed the checking logic to work with steam * Updated cookie consent for website

--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -135,6 +135,8 @@
     <Content Include="changelogs\1.1.0.0.md" />
     <Content Include="changelogs\1.1.0.1.md" />
     <Content Include="changelogs\1.1.0.3.md" />
+    <Content Include="changelogs\1.1.0.4.md" />
+    <Content Include="changelogs\1.2.0.0.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
