--- a/Server/Backend.Test/Backend.Test.csproj
+++ b/Server/Backend.Test/Backend.Test.csproj
@@ -61,6 +61,7 @@
     <Content Include="changelogs\1.2.0.1.md" />
     <Content Include="changelogs\1.2.0.2.md" />
     <Content Include="changelogs\1.2.0.3.md" />
+    <Content Include="changelogs\1.2.0.4.md" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
