--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -30,8 +30,8 @@
     "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "5.2.0",
+    "@angular/cli": "^8.3.23",
+    "@angular/compiler-cli": "^8.2.14",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
     "codelyzer": "2.0.0",
