--- a/Server/Frontend/package.json
+++ b/Server/Frontend/package.json
@@ -11,33 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.0",
-    "@angular/cdk": "5.0.4",
-    "@angular/common": "5.2.0",
-    "@angular/compiler": "5.2.0",
-    "@angular/core": "5.2.0",
-    "@angular/forms": "5.2.0",
-    "@angular/http": "5.2.0",
-    "@angular/material": "5.0.4",
-    "@angular/platform-browser": "5.2.0",
-    "@angular/platform-browser-dynamic": "5.2.0",
-    "@angular/router": "5.2.0",
-    "angular2-markdown": "2.2.3",
-    "cookieconsent": "^3.0.6",
+    "@angular/animations": "8.2.14",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "ngx-md": "8.1.6",
+    "cookieconsent": "^3.1.1",
     "core-js": "2.4.1",
-    "ngx-cookieconsent": "^1.0.1",
-    "rxjs": "5.5.6",
+    "ngx-cookieconsent": "2.2.3",
+    "rxjs": "^6.5.2",
     "zone.js": "0.8.11"
   },
   "devDependencies": {
     "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "^8.2.14",
+    "@angular-devkit/build-angular": "0.803.15",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.60",
-    "codelyzer": "2.0.0",
-    "ts-node": "3.0.4",
-    "tslint": "4.5.0",
-    "typescript": "2.4.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "codelyzer": "5.0.1",
+    "ts-node": "8.2.0",
+    "tslint": "5.17.0",
+    "typescript": "3.4.5"
   }
 }
